--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,9 @@ header {
 }
 
 .logo {
-    height: 90px;
+    height: 50px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     cursor: pointer;
 }
 
