--- a/css/style-des-domestic.css
+++ b/css/style-des-domestic.css
@@ -134,7 +134,7 @@ header {
 .hero-bg {
   position: relative;
   height: 300px;
-  background-image: url("../Figma_pic/breadcrumb.jpg");
+  background-image: url("../Destination_pic/breadcrumb.jpg");
   background-size: cover;
   background-position: center;
   display: flex;
