--- a/css/checkout.css
+++ b/css/checkout.css
@@ -127,6 +127,7 @@ header {
 .checkout-container {
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
     padding: 50px;
     max-width: 1200px;
     margin: 20px auto;
@@ -144,6 +145,20 @@ header {
 .contact-info h2 {
     font-size: 20px;
     margin-bottom: 20px;
+}
+
+.contact-info textarea {
+    width: 100%;
+    max-width: 100%;
+    height: 150px;
+    max-height: 120px;
+    padding: 10px;
+    font-size: 15px;
+    resize: none;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    margin-top: 10px;
+    box-sizing: border-box;
 }
 
 .form-group {
@@ -239,12 +254,17 @@ header {
 .total-price {
     font-size: 16px;
     color: #333;
+    padding-bottom: 20px;
 }
 
 .total-price span {
     font-size: 18px;
     font-weight: bold;
     color: #FF5722;
+}
+
+.total-price p {
+    margin: 15px 0;
 }
 
 .footer {
@@ -273,6 +293,20 @@ header {
     list-style: none;
     padding: 0;
 }
+
+.footer-section a {
+    text-decoration: none;
+    color: #000;
+}
+
+.footer-section li a{
+    text-decoration: none;
+    color: #000;
+    list-style-type: none;
+}
+
+.footer-section
+
 .social-icons img, .payment-icons img {
     width: 24px;
     margin-right: 8px;
