--- a/css/info.css
+++ b/css/info.css
@@ -642,68 +642,88 @@ header {
 .footer {
     background-color: #a3d5f7;
     color: #000;
-    padding: 40px 10%; /* Đồng bộ padding với các phần khác */
+    padding: 40px 10%;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     align-items: flex-start;
-}
-
-.footer-section {
+  }
+  
+  .footer-section {
     flex: 1;
     min-width: 200px;
-    margin: 10px 20px 20px 0px; /* Giảm margin bên trái và thêm margin dưới */
-}
-.footer-section h4 {
+    margin: 10px 20px 20px 0px;
+  }
+  
+  .footer-section h4 {
     margin-bottom: 10px;
-}
-.footer-section p, .footer-section li {
+  }
+  
+  .footer-section p,
+  .footer-section li {
     margin: 4px 0;
     font-size: 14px;
-}
-.footer-section ul {
+  }
+  
+  .footer-section li a {
+    text-decoration: none;
+    color: #000;
+  }
+  
+  .footer-section a {
+    text-decoration: none;
+    color: #000;
+  }
+  
+  .footer-section ul {
     list-style: none;
     padding: 0;
-}
-.social-icons img, .payment-icons img {
+  }
+  
+  .social-icons img,
+  .payment-icons img {
     width: 24px;
     margin-right: 8px;
     vertical-align: middle;
-}
-.subscribe-box {
+  }
+  
+  .subscribe-box {
     background-color: white;
     padding: 10px;
     border-radius: 4px;
     display: flex;
     align-items: center;
     margin-bottom: 15px;
-}
-.subscribe-box input {
+  }
+  
+  .subscribe-box input {
     border: none;
     outline: none;
     flex: 1;
     padding: 5px;
-}
-.subscribe-box img {
+  }
+  
+  .subscribe-box img {
     width: 20px;
     cursor: pointer;
-}
-.footer-container {
+  }
+  
+  .footer-container {
     background-color: #0a2c52;
     height: 40px;
     width: 100%; /* Đảm bảo chiều rộng 100% */
     margin-top: -50px; /* Thêm khoảng cách giữa footer và nội dung */
-}
-
-.payment-icons{
+  }
+  
+  .payment-icons {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 10px;
-}
-
-.payment-icons img{
+  }
+  
+  .payment-icons img {
     margin: 0 5px;
     height: 100px;
     width: 200px;
-}
+  }
