--- a/css/style-des.css
+++ b/css/style-des.css
@@ -257,24 +257,39 @@ header {
   min-width: 200px;
   margin: 10px 20px 20px 0px;
 }
+
 .footer-section h4 {
   margin-bottom: 10px;
 }
+
 .footer-section p,
 .footer-section li {
   margin: 4px 0;
   font-size: 14px;
 }
+
+.footer-section li a {
+  text-decoration: none;
+  color: #000;
+}
+
+.footer-section a {
+  text-decoration: none;
+  color: #000;
+}
+
 .footer-section ul {
   list-style: none;
   padding: 0;
 }
+
 .social-icons img,
 .payment-icons img {
   width: 24px;
   margin-right: 8px;
   vertical-align: middle;
 }
+
 .subscribe-box {
   background-color: white;
   padding: 10px;
@@ -283,16 +298,19 @@ header {
   align-items: center;
   margin-bottom: 15px;
 }
+
 .subscribe-box input {
   border: none;
   outline: none;
   flex: 1;
   padding: 5px;
 }
+
 .subscribe-box img {
   width: 20px;
   cursor: pointer;
 }
+
 .footer-container {
   background-color: #0a2c52;
   height: 40px;
