--- a/css/info.css
+++ b/css/info.css
@@ -332,6 +332,7 @@ header {
 
 .booking-box .book-tour {
     width: 100%;
+    margin-top: 15px;
     padding: 10px;
     background-color: rgb(255, 0, 0);
     color: rgb(255, 255, 255);
