--- a/css/style_content.css
+++ b/css/style_content.css
@@ -21,13 +21,15 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15px 5%;
+    padding: 0px 5%;
     background-color: #ffffff;
     position: relative;
 }
 
 .logo {
-    height: 90px;
+    height: 50px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     cursor: pointer;
 }
 
@@ -36,7 +38,7 @@ header {
     justify-content: space-between;
     align-items: center;
     height: 10px;
-    padding: 0 20px;
+    padding: 0;
 }
 
 .nav_links {
@@ -116,18 +118,11 @@ header {
     top: 0;
 }
 
-/* Thêm mũi tên cho các mục có submenu */
-.nav_links > li:first-child > a:after {
-    content: " ▾";
-    font-size: 12px;
-}
-
 .sub_menu li > a:after {
     position: absolute;
     right: 15px;
     font-size: 12px;
 }
-
 /* ################################# TOP TITLE #################################*/
 .top_title {
     margin-bottom: 20px;
@@ -291,6 +286,15 @@ header {
     list-style: none;
     padding: 0;
 }
+
+.footer-section li a {
+    text-decoration: none;
+    color: #000;
+}
+.footer-section a {
+    text-decoration: none;
+    color: #000;
+}
 .social-icons img, .payment-icons img {
     width: 24px;
     margin-right: 8px;
@@ -342,18 +346,18 @@ header {
 
 }
 
-
 .container {
     position: absolute;
-    top: 50%;
+    top: 35%;
     left: 50%;
-    transform:translate(-50%, -50%);
+    transform: translate(-50%, 0);
     width: 880px;
-    height: 600px;
+    height: 500px;
     background: #f5f5f5;
-
-    margin-top: 300px; /* Khoảng cách từ header */
-    margin-bottom: 100px;
+    z-index: 9999;
+    border-radius: 30px;
+    box-shadow: 0 8px 32px rgba(0,0,0,0.25);
+    overflow: hidden;
 }
 
 .container .slide .item {
