--- a/css/style-abs.css
+++ b/css/style-abs.css
@@ -260,7 +260,7 @@ header {
 .hero-bg {
   position: relative;
   height: 300px;
-  background-image: url("/img/about/hero_img.png");
+  background-image: url("../img/about/about.jpg");
   background-size: cover;
   background-position: center;
   display: flex;
@@ -403,7 +403,7 @@ header {
 .travel-bg {
   position: relative;
   height: 100%;
-  background-image: url("/img/about/features.png");
+  background-image: url("../img/about/features.png");
   background-size: cover;
   background-position: center;
   display: flex;
@@ -446,7 +446,7 @@ header {
 /* ############################## EXPERT SECTION #################################### */
 .expert-section {
   padding: 60px 20px;
-  background-image: url(../About-us_pic/footer-bg.png);
+  background-image: url("../img/about/footer-bg.png");
   text-align: center;
 }
 
@@ -492,7 +492,7 @@ header {
 
 .expert-img {
   width: 100%;
-  height: 300px;
+  height: 350px;
   object-fit: cover;
   border-radius: 10px;
   margin-bottom: 15px;
