--- a/css/style-des.css
+++ b/css/style-des.css
@@ -133,7 +133,7 @@ header {
 .hero-bg {
   position: relative;
   height: 300px;
-  background-image: url("/img/destinations/banner/bg.png");
+  background-image: url("../img/destinations/banner/bg.png");
   background-size: cover;
   background-position: center;
   display: flex;
