--- a/css/style_contact.css
+++ b/css/style_contact.css
@@ -126,7 +126,7 @@ header {
 .hero-bg {
     position: relative;
     height: 300px;
-    background-image: url("../img/news1/backhead.jpg");
+    background-image: url("../img/news/news1/backhead.jpg");
     background-size: cover;
     background-position: center;
     display: flex;
@@ -272,6 +272,13 @@ input {
     height: 100%;
     margin-top: 20px;
 }
+
+.pic1 {
+    max-width: 450px;
+    max-height: 600px;
+    margin-bottom: 100px;
+}
+
 .footer {
     background-color: #a3d5f7;
     color: #000;
