fixed the resolution of the imgage slideshow

--- a/css/info.css
+++ b/css/info.css
@@ -232,7 +232,8 @@ header {
 }
 
 .slide img {
-    width: 100%;
+    min-width: 600px; /* Giới hạn chiều rộng tối đa */
+    min-height: 400px;
     border-radius: 8px;
 }
 
